# RenaissancePatcher

./: CMakeLists.txt  RenaissancePatcher.vc08.sln  RenaissancePatcher.vc17.sln
RenaissancePatch/: .gitignore  CMakeLists.txt  README.md  RenaissancePatch.vc08.vcproj  RenaissancePatch.vc17.vcxproj  dllmain.c  dllmain.cpp
RenaissancePatcher/: .gitignore  CMakeLists.txt  Manifest.manifest  RenaissancePatcher.vc08.vcproj  RenaissancePatcher.vc17.vcxproj  RenaissancePatcher.vc17.vcxproj.filters  bytepatch.cpp  bytepatch.h  consts.h  flashpatch.cpp  flashpatch.h  main.cpp  main.h  music.cpp  music.h  peutils.cpp  peutils.h  res.rc  res_cmake_msvc.rc  res_mingw.rc  resources.h  restools.cpp  restools.h
RenaissancePatcher/Assets/: sex_on_the_desktop.xm
RenaissancePatcher/dll/: README.MD
RenaissancePatcher/ibxm/: ibxm.cpp  ibxm.h
